// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PerimeterToolOverlay > closing polygon behavior > does not render closing line when not snapping to first point 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="#6c757d"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#adb5bd"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="300"
      data-y="300"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > closing polygon behavior > renders closing line when snapping to first point with invalid closure 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="#6c757d"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#dc3545"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="0"
      data-y="0"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > closing polygon behavior > renders closing line when snapping to first point with valid closure 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="#6c757d"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#28a745"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="0"
      data-y="0"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > edge cases > handles empty points array gracefully 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="0"
      data-y="0"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > edge cases > handles exactly two points (minimum for line rendering) 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="#6c757d"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#adb5bd"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="0"
      data-y="0"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="0"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with multiple points > differentiates first point styling from other points 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="#6c757d"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#adb5bd"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="0"
      data-y="0"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="0"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="0"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="50"
      data-y="50"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with multiple points > renders polygon with connected lines and points 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="#6c757d"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#adb5bd"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="200"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with no points > renders only snap point when no polygon points exist 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="200"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with single point > renders first point and snap point 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#adb5bd"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with single point > renders line to pointer position with invalid styling 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#dc3545"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="50"
      data-y="50"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="150"
      data-y="150"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with single point > renders line to pointer position with valid styling 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#adb5bd"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="50"
      data-y="50"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="150"
      data-y="150"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > snapping behavior > renders snap lines when snap result has lines 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-testid="konva-group"
    >
      <div
        data-opacity="0.5"
        data-stroke="#0066ff"
        data-stroke-width="13.333333333333334"
        data-testid="konva-line"
        listening="false"
      />
      <div
        data-opacity="0.5"
        data-stroke="#0066ff"
        data-stroke-width="13.333333333333334"
        data-testid="konva-line"
        listening="false"
      />
    </div>
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#adb5bd"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="50"
      data-y="50"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="150"
      data-y="150"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > snapping behavior > renders snap lines when snap result has lines 2`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-testid="konva-group"
    >
      <div
        data-opacity="0.5"
        data-stroke="#0066ff"
        data-stroke-width="13.333333333333334"
        data-testid="konva-line"
        listening="false"
      />
      <div
        data-opacity="0.5"
        data-stroke="#0066ff"
        data-stroke-width="13.333333333333334"
        data-testid="konva-line"
        listening="false"
      />
    </div>
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#adb5bd"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="50"
      data-y="50"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="150"
      data-y="150"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > snapping behavior > renders snap position when snap result exists 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#adb5bd"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="125"
      data-y="125"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > zoom responsiveness > adjusts line extension based on stage dimensions 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-testid="konva-group"
    >
      <div
        data-opacity="0.5"
        data-stroke="#0066ff"
        data-stroke-width="13.333333333333334"
        data-testid="konva-line"
        listening="false"
      />
    </div>
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > zoom responsiveness > scales elements appropriately at high zoom 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="#6c757d"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#adb5bd"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > zoom responsiveness > scales elements appropriately at low zoom 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="#6c757d"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[66.66666666666667,66.66666666666667]"
      data-stroke="#adb5bd"
      data-stroke-width="13.333333333333334"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#6c757d"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="#007bff"
      data-radius="33.333333333333336"
      data-stroke="#ffffff"
      data-stroke-width="6.666666666666667"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
  </div>
</div>
`;
